# delay-line

./: .gitignore
admin/: Farnell order 20170804.ods  Farnell order 20180206.ods
demo/: .gitignore  slides.tex
hdl/lattice_simulation_models/: ABIWTCZ4.v  sb_ice_syn_vital.vhd
hdl/sim/: .gitignore  makefile.edge_detect  test_delay_line.v  test_edge_detect.v  test_fifo.sh
hdl/src/: comparator.v  delay_line.v  fifo.v  icestick.pcf  pulse_gen.v
kicad/: Lattice_iCE_FPGA.lib  README.MD  edsac_component_library.dcm  edsac_component_library.lib  fpga.sch  output_pcb-cache.lib  output_pcb-rescue.lib  output_pcb.kicad_pcb  output_pcb.pro  output_pcb.sch
kicad/gerber/: output_pcb-B.Cu.gbr  output_pcb-B.Mask.gbr  output_pcb-B.SilkS.gbr  output_pcb-Edge.Cuts.gbr  output_pcb-F.Cu.gbr  output_pcb-F.Mask.gbr  output_pcb-F.SilkS.gbr  output_pcb.drl
kicad/input_pcb/: input_pcb-cache.lib  input_pcb.sch
kicad/output_pcb/: README.MD  fp-lib-table  fpga.sch  output_pcb.kicad_pcb  output_pcb.pro  output_pcb.sch
report/: .gitignore  master.tex
report/docs/: abstract.tex  acronyms.tex  appendices.tex  main.tex  preamble.tex  title_page.tex
report/refs/: references.bib
sch/: .gitignore  library.dcm  library.lib
sch/delay_line/: delay_line.pro  delay_line.sch  library.dcm
sch/test_harness/: test_harness.pro  test_harness.sch
software/mem_gui/: .gitignore  CMakeLists.txt  a.out  makefile  mem_gui.c  mem_gui.cpp  mem_gui.glade  mem_gui.hpp  serial.cpp  serial.hpp
software/mem_gui/ftdi/: ftdi.cpp  ftdi.h
software/mem_gui/ftdi_wrapper/: ftdi_wrapper.cpp  ftdi_wrapper.h  ftdi_wrapper.hpp
software/mem_gui/generic_classes/: generic_classes.cpp  generic_classes.hpp
software/mem_gui/main_gui/: demodulator_options.cpp  demodulator_options.hpp  log_options.cpp  log_options.hpp  main_gui.cpp  main_gui.hpp  memory_manager_options.cpp  memory_manager_options.hpp  memory_options.cpp  memory_options.hpp  modulator_options.cpp  modulator_options.hpp  port_options.cpp  port_options.hpp  run_options.cpp  run_options.hpp  system_options.cpp  system_options.hpp
software/mem_gui/memory_manager/: memory_manager.cpp  memory_manager.hpp
software/mem_gui/status_manager/: status_manager.cpp  status_manager.hpp
software/mem_gui/uart_manager/: uart_manager.cpp  uart_manager.hpp
software/mem_gui/uart_msg/: uart_msg.cpp  uart_msg.hpp
software/uart_msg_const_gen/: README.MD  uart_msg_const_gen.py
spice/: .gitignore  Draft2.asc  EA50.asy  EA50_box.asy  EF54.asy  EF55.asy  LM7372.asy  LMH6639.asy  MCP661.asy  SN74LVC1G17.asy  bc447_amp.asc  clock_buffer_test.asc  delay_line_output.asc  dummy_edsac.asc  dummy_edsac.asy  heater_psu.asc  heater_psu.asy  lt1229_amp_filter.asc  lt1229_cascaded_amp.asc  store_regen_input.asc  store_regen_output.asc  store_regen_output.asy  test_harness_input.asc  test_harness_output.asc  top_transformer.asc
spice/component_models/: LM7372.txt  LMH6639.txt  MCP661.inc  README.MD
spice/misc/: Draft1.asc  LT1229_amp.asc  bc447_amp_small_signal.asc
(+136 files in other folders)
